[gd_scene load_steps=2 format=3 uid="uid://dl6gfk8rv0okx"]

[ext_resource type="Script" path="res://Scripts/UI/main_menu.gd" id="1_rmehh"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmehh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.356863, 0, 0.65098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -50.5
offset_right = 37.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls
"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
